198-举例说明日志中堆空间数据如何解读